# agentic-starter-kit

./: .gitignore  AGENTS.md  BRIEFING.md  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  COMMAND_AND_AGENT_SPECS.md  IDE_PROMPT.md  IDE_PROMPT_PHASE_12.md  LICENSE  METHODOLOGY.md  Makefile  README.md  RESEARCH_FINDINGS.md  SWEBOK_GAP_REGISTER.md  SWEBOK_GAP_REGISTER_EXTENSIONS.md  codecov.yml  cookiecutter.json  copier.yml
.codacy/: cli.sh  codacy.yaml
.githooks/: pre-push
.github/: CODEOWNERS
.github/workflows/: smoke-test.yml  template-smoke-test.yml
docs/: BRIEFING.md  BUILD_PLAN.md  COMMAND_AND_AGENT_SPECS.md  EXAMPLES.md  EXECUTIVE_SUMMARY.txt  EXTENSIONS_DECISIONS.md  IDE_PROMPT_PHASE_12.md  METHODOLOGY.md  OPTIMIZATION_ROADMAP.md  PROJECT_DASHBOARD.md  SWEBOK_GAP_REGISTER.md  SWEBOK_GAP_REGISTER_EXTENSIONS.md  TEST_REPORT.md  UPDATING.md
hooks/: _prune_pyproject.py  post_gen_project.py
scripts/local-ci/: Dockerfile.ci  README.md  gate.sh  lib.sh  orb-ci.sh  review.sh  run-matrix.sh
tests/: test_no_copier_comment_collision.py  test_post_gen_pruning.py  test_prune_variants.py
{{cookiecutter.project_slug}}/: .codacy.yml  .copier-answers.yml  .cz.toml  .dockerignore  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .snyk  AGENTS.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  DIRECTIVES.md  Dockerfile  GEMINI.md  KNOWN-ISSUES.md  LICENSE  Makefile  QUICKSTART-PYTHON.md  QUICKSTART-TYPESCRIPT.md  QUICKSTART.md  README.md  SECURITY.md  codecov.yaml  governance-rules.yaml  mkdocs.yml  package.json  pyproject.toml  release-please-config.json  tsconfig.json
{{cookiecutter.project_slug}}/.claude/: settings.json
{{cookiecutter.project_slug}}/.claude/agents/: README.md  governance-auditor.md  lead-software-engineer.md  python-pro.md  sdlc-technical-writer.md  security-reviewer.md  test-automator.md  typescript-pro.md  ux-delight-specialist.md
{{cookiecutter.project_slug}}/.claude/commands/: audit.md  check-traceability.md  commit.md  gov.audit.md  gov.check-traceability.md  gov.commit.md  gov.implement.md  gov.plan.md  gov.prime.md  gov.pull-request.md  gov.review.md  gov.session-log.md  gov.spec-bump.md  gov.start.md  gov.status.md  gov.sync.md  gov.test.md  gov.threat-model.md  gov.verify.md  implement.md  plan.md  prime.md  pull-request.md  review.md  session-log.md  spec-bump.md  start.md  status.md  sync.md  test.md  threat-model.md  verify.md
{{cookiecutter.project_slug}}/.claude/hooks/: README.md  package.json  post-tool-use.cjs  post-tool-use.js  pre-tool-use.js  session-start.cjs  session-start.js  user-prompt-submit.cjs  user-prompt-submit.js
{{cookiecutter.project_slug}}/.claude/skills/: README.md  audit-trail-tail.md  run-validate.md  traceability-update.md
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json  post-create.sh
{{cookiecutter.project_slug}}/.githooks/: README.md  pre-commit  pre-merge-commit  pre-push
{{cookiecutter.project_slug}}/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  docs.yml  release-please.yml  release.yml  scorecards.yml  supply-chain.yml
{{cookiecutter.project_slug}}/Makefile.fragments/: checks.mk  clean.mk  defs.mk  eval.mk  evals.mk  hooks.mk  python.mk  quality.mk  sync.mk  typescript.mk
{{cookiecutter.project_slug}}/docs/: MCP_POLICY.md  STANDARDS.md  THREAT_MODEL.md  index.md  prompt-versioning-policy.md  sbom-policy.md
{{cookiecutter.project_slug}}/evals/: README.md  promptfooconfig.yaml
{{cookiecutter.project_slug}}/prompts/: README.md
{{cookiecutter.project_slug}}/prompts/example-summarizer/: CHANGELOG.md  v1.md
{{cookiecutter.project_slug}}/scripts/: check-action-pins.sh  check-doc-drift.sh  check-governance.sh  check-traceability.sh  generate-sbom.sh  marker-scan.sh  query-governance.sh
{{cookiecutter.project_slug}}/scripts/governance_review/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/scripts/governance_review/governance_review/: __init__.py  checks.py  cli.py  finding.py  formatters.py  governance.py  registry.py
{{cookiecutter.project_slug}}/scripts/lib/: common.sh  governance.py
{{cookiecutter.project_slug}}/specs/deep_specs/: README.md
{{cookiecutter.project_slug}}/specs/deep_specs/ADR/: 0001-adr-template.md  0002-initial-scaffold-architecture.md
{{cookiecutter.project_slug}}/tests/: README.md  hook_test_spec.json  hook_test_spec.yaml  test_action_pin_check.py  test_audit_hooks.cjs  test_audit_hooks.js  test_audit_hooks.py  test_command_contracts.py  test_common_lib.py  test_git_hooks.sh  test_governance_cleanup.py  test_governance_loader.py  test_governance_review.py  test_post_create_ai_clis.py  test_pre_tool_use_hook.js  test_pre_tool_use_hook.py  test_skill_contracts.py  test_validation_scripts.py
{{cookiecutter.project_slug}}/tests/fixtures/: broad-push-all.json  broad-push-mirror.json  chained-subcommand.json  feature-push-allowed.json  nested-shell.json  non-bash-tool.json  protected-push.json
