# pyproject.toml — {{ cookiecutter.project_name }}
#
# Python project metadata and tool configuration. Used by `uv` for
# dependency management and by ruff / {{ cookiecutter.python_typechecker }} / pytest for
# tool config. Ships when `primary_language` is `python` or
# `polyglot`; the post-gen hook removes it for `typescript`.
#
# Type-checker is selected via the `python_typechecker` cookiecutter
# variable. Default is `ty` (Astral); `mypy` is offered as an
# opt-in fallback for projects with stub-heavy ecosystems.

[project]
name = "{{ cookiecutter.python_package_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "{{ cookiecutter.license }}" }
authors = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
keywords = ["agentic", "governance", "scaffold"]

dependencies = []

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.python_package_name }}"]

# PEP 735 dependency groups. `uv sync --group dev` resolves the dev
# set explicitly without forcing inclusion in install.
[dependency-groups]
dev = [
  "ruff>=0.7,<1",
{% if cookiecutter.python_typechecker == "ty" %}  "ty>=0.0.1,<1",
{% else %}  "mypy>=1.11,<2",
  "types-PyYAML>=6,<7",
{% endif %}  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "pre-commit>=3.7,<5",
{% if cookiecutter.include_sbom == "yes" %}  "cyclonedx-bom>=4,<6",
{% endif %}]

# --- Ruff ---------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
exclude = [
  ".venv",
  "venv",
  "node_modules",
  "build",
  "dist",
  "tests/fixtures",
  "sbom",
  "report",
]

[tool.ruff.lint]
# Curated rule set — opinionated but not exhaustive. Per REC-001,
# rules that fire frequently without catching real defects get
# disabled with a documented reason.
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "S",   # flake8-bandit (security)
  "RUF", # ruff-specific
  "SIM", # flake8-simplify
]
ignore = [
  # `S101` (use of assert) is disabled in test directories below.
]

[tool.ruff.lint.per-file-ignores]
# `tests/**` exemptions:
#   S101 — asserts are pytest's contract.
#   S603, S607 — subprocess use is intentional (the hook test
#     suite invokes `node` and `git` to run the runtime hook
#     under controlled branch state).
"tests/**" = ["S101", "S603", "S607"]
"scripts/**" = ["S603", "S607"]  # subprocess use is intentional

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- type checker -------------------------------------------------
{% if cookiecutter.python_typechecker == "ty" %}
[tool.ty.environment]
# Astral's `ty`. Configuration intentionally minimal — ty's defaults
# are aligned with the strict-mode end of the spectrum.
python-version = "3.11"
# `scripts/governance_review/` ships the GOV-NNN validator as an
# importable package; tests load it via PYTHONPATH manipulation.
# `scripts/lib/` hosts the governance-rules.yaml loader consumed by
# the bash gates and `tests/test_governance_loader.py`. Add both so
# ty can resolve their imports during static analysis.
extra-paths = ["scripts/governance_review", "scripts/lib"]

[tool.ty.src]
exclude = [
  "tests/fixtures",
  "build",
  "dist",
  "sbom",
  "report",
]

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
# pytest fixtures often fight with strict reporting; relax in tests only.
unresolved-import = "warn"
{% else %}
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true
exclude = [
  "tests/fixtures",
  "build",
  "dist",
  "sbom",
  "report",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false  # pytest fixtures often fight with strict

# Uncomment for data/scientific projects — these libraries don't ship
# usable type stubs, so strict mode flags every import. Add only what
# your project actually imports; pandas and numpy ship stubs and are
# intentionally absent.
# [[tool.mypy.overrides]]
# module = [
#   "matplotlib.*",
#   "scipy.*",
#   "seaborn.*",
#   "sklearn.*",
#   "statsmodels.*",
# ]
# ignore_missing_imports = true
{% endif %}

# --- pytest -------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]

# --- coverage -----------------------------------------------------

[tool.coverage.run]
branch = true
source = ["src", "."]
omit = [
  "tests/*",
  "scripts/*",
  ".venv/*",
  "build/*",
  "dist/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0  # REC-004 — set to current measured baseline at first coverage run
