[project]
name = "governance-review"
version = "0.1.0"
description = "Machine-readable governance validator for the agentic-starter-kit scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agentic-starter-kit" }]
keywords = ["governance", "validation", "sarif", "scaffold"]
dependencies = ["PyYAML>=6.0,<7"]

[project.scripts]
governance-review = "governance_review.cli:main"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["governance_review"]
